# AI-Backend-Playground

./: .flake8  .gitignore  ARCHITECTURE_GUIDE.md  CHANGELOG.md  COMMIT_SUMMARY.md  DOCKER_HUB_SETUP.md  Dockerfile  ENGLISH_PROJECT_SUMMARY.md  HOW_IT_WORKS.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  demo.py  docker-compose.yml  env.example  fix_imports.py  pyproject.toml  remove_all_type_ignores.py  remove_unused_ignores.py  requirements.txt  results.csv
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: password.py  security.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routes/: auth.py  ml.py  tasks.py  users.py
backend/app/schemas/: __init__.py  auth.py  task.py  user.py
backend/app/services/: task_service.py  user_service.py
data/: sample_data.csv
docker/: init.sql
ml_core/: __init__.py  decision_tree.py  kmeans.py  random_forest.py
scripts/: init_project.py
tests/: test_api.py  test_kmeans.py
